fix logo clipping on retina mobile (bug 1134402)

--- a/src/media/css/header.styl
+++ b/src/media/css/header.styl
@@ -570,7 +570,7 @@ body {
 }
 
 @media $retina-tablet {
-    .desktop .wordmark {
-        background: url(../img/pretty/marketplace-beta-logo2X.png) no-repeat 0 50% / 231px auto;
+    .site-header .wordmark {
+        background: url(../img/pretty/marketplace-beta-logo2X.png) no-repeat 0 50% / 200px auto;
     }
 }
